CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Try)

# Project version.
SET(${PROJECT_NAME}_MAJOR_VERSION 0)
SET(${PROJECT_NAME}_MINOR_VERSION 1)
SET(${PROJECT_NAME}_PATCH_LEVEL 0)

INCLUDE(Requisities.txt)

# Sub-modules.
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(tests)

# Unit testing.
ENABLE_TESTING()
ADD_TEST(Try tests/TryTests)
