INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../core)

set(SOURCES
   main.cpp
   catch.hpp
)

set(LIBRARIES
    TryCore
)

ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(string)
ADD_SUBDIRECTORY(patterns)
ADD_SUBDIRECTORY(fsm)
ADD_SUBDIRECTORY(objects)

ADD_EXECUTABLE(TryTests ${SOURCES})

TARGET_LINK_LIBRARIES(TryTests ${LIBRARIES})
